# Smart_Spend

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  TASK.md  alembic.ini  docker-compose.yml  pyproject.toml  swagger.json  swagger.yaml
.github/: CODEOWNERS
alembic/: env.py
alembic/versions/: 1b0f2d8f3c2e_add_refresh_tokens_table.py  3bed4ac67844_add_transaction_to_group_column.py  4703a23f226b_описание.py  5e86f51bebf6_groups.py  7fe8df825707_create_users_table.py  9500abe9619e_initial_migration.py  98927c5112d8_add_unique_constraint_user_id_in_group_.py  b4ebbfe2b430_add_user_id_to_transactions.py
app/: main.py
app/core/: config.py  core_module.py  db.py  dependencies.py  exceptions.py  exceptions_handler.py  middleware.py  security.py
app/core/dto/: __init__.py  response.py
app/core/guards/: __init__.py
app/core/pipes/: __init__.py
app/modules/analytics/: router.py  schemas.py  service.py
app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/group_members/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/groups/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/transactions/: models.py  repository.py  (+3 more)
app/shared/: base_model.py  mixins.py  utils.py
reports/: report_artemov_georgiy.md  report_lavrentiev_nikita.md  report_lukianchuk_vladislav.md  report_paniklov_arseniy.md  report_tsybizov_dmitry.md
scripts/: generate_openapi.py
tests/: conftest.py  test_main.py  test_transactions.py
(+22 files in other folders)
